# TautelliniMods

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
.claude/agents/: g1r-release-ops.md
G1R/: LuaModdingSurface.md  README.md  UE4SS-Lua-Best-Practices.md
G1R/AnimSpeedProbe/Scripts/: main.lua
G1R/CameraSettings/Scripts/: config.lua  main.lua
G1R/CameraSettings/tests/: test_surface.lua
G1R/FastTravelAnywhere/: IMMERSIVE-MODE-SPEC.md  MAP-PROJECTION-FINDINGS.md  README.md
G1R/FastTravelAnywhere/Scripts/: config.lua  main.lua
G1R/FastTravelAnywhere/tests/: test_cost.lua
G1R/LockBuildProbe/Scripts/: main.lua
G1R/LockpickSettings/: README.md  SPEC.md  TECH-DEBT.md  bundled-readme.txt
G1R/SharedModMenu/: .nokit  BUILD-GUIDE.md  README.md
G1R/TautelliniConsole/: COMMANDS.md  README.md
G1R/TautelliniDevProbe/: README.md  map_calib.lua
G1R/Wetterwerk/: README.md
G1R/Wetterwerk/cpp/: .gitignore  BUILD.md  CMakeLists.txt  INSTALL.md
G1R/Wetterwerk/cpp/Wetterwerk/: CMakeLists.txt  WeatherControl.cpp  WeatherControl.hpp  dllmain.cpp
G1R/reference/: UE4SS-Documentation.md  as-class-props.txt  blob-format-notes.md  g1r-class-props.txt  ge-ga-assets.txt  lock-graphs.lua  lock-tiers.txt  lockprobe-session.txt
brand/: .gitignore  DESIGN-SYSTEM.md  README.md  house.css  render-wetterwerk.ps1  render.ps1
brand/templates/: badge.html  card.html  footer.html  gallery-autosolve.html  gallery-connections.html  gallery-hint.html  gallery-safe.html  gallery-tries.html  hero-cards.html  hero.html  nexus-header.html  section.html  warning.html
brand/themes/: g1r.css  wetterwerk.css
tools/: .gh-release-notes-3.1.3.md  .gh-release-notes-3.1.4.md  .release-notes-3.1.2.md  .release-notes-3.1.3.md  .release-notes-3.1.4.md  build_policies.py  build_release.ps1  ctx.py  decode_bc.py  decode_locks.lua  deploy.ps1  deploy_env.ps1  dump_binds.py  dump_context.py  dump_hashes.lua  extract_locks.py  hexdump.py  livegraphs.lua  lockpicksettings_build_release.ps1  measure_authored.py  measure_bfs.py  measure_search.py  measure_table.py  mine_strings.py  natives.py  parse_minidump.py  parse_ue4ss_docs.py  rawstrings.py  scan_achievements.py  sharedmodmenu_build_release.ps1  sigs.py  sim_anchor.py  sim_astar_faithful.py  sim_planner.py  solve_lock.py  time_inflate.lua  ue4ss.version  validate_policies.py  verify_livegraphs.lua
(+166 files in other folders)
